--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"prepare": "npm run smui-theme",
+		"smui-theme": "smui-theme compile static/smui.css -i src/theme",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -15,6 +17,15 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@smui/button": "^7.0.0-beta.4",
+		"@smui/card": "^7.0.0-beta.4",
+		"@smui/common": "^7.0.0-beta.4",
+		"@smui/form-field": "^7.0.0-beta.8",
+		"@smui/layout-grid": "^7.0.0-beta.4",
+		"@smui/radio": "^7.0.0-beta.4",
+		"@smui/select": "^7.0.0-beta.8",
+		"@smui/textfield": "^7.0.0-beta.4",
+		"@smui/top-app-bar": "^7.0.0-beta.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"eslint": "^8.28.0",
@@ -22,11 +33,15 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"smui-theme": "^7.0.0-beta.4",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"smui": "^1.0.5"
+	}
 }
