--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@smui/textfield": "^7.0.0-beta.4",
 		"@smui/top-app-bar": "^7.0.0-beta.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.4",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
